# mcp-file

./: .gitignore  .neatifyignore  Cargo.toml  README.md
.github/workflows/: release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  TreeNodeItem.vue  style.css  types.ts  vite-env.d.ts
src/: fs.rs  main.rs  protocol.rs  server.rs
tests/: integration.rs
